@@ -5,12 +5,17 @@ import java.io.BufferedReader;
 import java.io.DataOutputStream;
 import java.io.InputStreamReader;
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
 import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
 import java.util.HashMap;
+import java.util.logging.Logger;
 
 public class _Net {
+	public static final Logger logger = Logger.getLogger(_Net.class.getName());
+	private _Net() {}
+
 	public static String urlEncode(String value) {
 		try {
 			String encoded = URLEncoder.encode(value, StandardCharsets.UTF_8);
@@ -22,18 +27,16 @@ public class _Net {
 	}
 
 	public static String httpEncode(String value) {
-		// 使用 UTF-8 字符集进行编码
 		return URLEncoder.encode(value, StandardCharsets.UTF_8);
 	}
 
 	public static String sendGetData(String url) {
-		//_Log.debug("Get: "+url);
 		return sendData(url, "GET", null, "");
 	}
 
 	public static String sendData(String url, String type, HashMap<String, String> dataHead, String dataSend) {
 		try {
-			URL apiUrl = new URL(url);
+			URL apiUrl = URI.create(url).toURL();
 			HttpURLConnection connection = (HttpURLConnection) apiUrl.openConnection();
 			connection.setRequestMethod(type);
 			if (type.equals("POST")) {
@@ -49,13 +52,11 @@ public class _Net {
 				while ((responseLine = reader.readLine()) != null) {
 					response.append(responseLine);
 				}
-				//System.out.println("Response: " + response);
 			}
 			connection.disconnect();
 			return response.toString();
 		} catch (Exception e) {
-			//_Log.error(e.getMessage());
-			e.printStackTrace();
+			logger.severe(e.getMessage());
 			return "";
 		}
 	}
